tests/baselines/reference/numericIndexerConstraint3.errors.txt
numericIndexerConstraint3.ts(2,5): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
numericIndexerConstraint3.ts(6,5): error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.


==== numericIndexerConstraint3.ts (2 errors) ====
    class A {
        foo: number;
        ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    
    class B extends A {
        bar: string;
        ~~~
!!! error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
    }
    
    class C {
        0: B;
        [x: number]: A;
    }